# ShallowMaskedDiffusion-extended_Elgorni_Lucibello

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  README.md  datasets.py  diffusion.py  experiments.csv  models.py  pyproject.toml  rsync-logs.sh  train.py
.claude/agents/: architecture-auditor.md  claim-reviewer.md  reproducibility-reviewer.md  scientific-auditor.md
.claude/rules/: notebooks.md  scientific-contract.md  testing-and-reproducibility.md
.claude/skills/migrate-legacy-component/: SKILL.md
.claude/skills/review-scientific-claim/: SKILL.md
.github/workflows/: ci.yml
artifacts/reference/mmd_final_run/: manifest.json
configs/smoke/: smoke.toml  smoke_greedy.toml
data/: hopfield_T001_mcmc_N10000_S10_seed0.npz  hopfield_T001_mcmc_N20000_S10_seed0.npz  hopfield_T0_mcmc_N10000_S10_seed0.npz  hopfield_T0_mcmc_N20000_S10_seed0.npz  hopfield_T0_theory.npz
docs/: CLAUDE_CODE.md  EQUATION_TO_CODE_MAP.md  FINAL_REPOSITORY_MAP.md  FROZEN_LEGACY_RUNTIME.md  LEGACY_SCIENTIFIC_INDEX.md  LOCAL_ENVIRONMENT_TROUBLESHOOTING.md  MIGRATION_REPORT.md  MMD_NOTEBOOK_PROVENANCE.md  NOTATION.md  ORIGINAL_ARCHITECTURE.md  PHASE3_BRANCH_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4A_DESIGN_AUDIT.md  PHASE4C_ANALYSIS_SPEC.md  PHASE4C_EXPERIMENT_PROTOCOL.md  PHASE4C_PILOT_REPORT.md  PROVENANCE.md  REFERENCE_RESULTS_MANIFEST.md  REPO_AUDIT.md  RESEARCH_SPEC.md  UPSTREAM_DISCREPANCIES.md
docs/adr/: 001-training-loop.md  002-configuration-system.md  003-artifact-format.md  004-legacy-compatibility.md
docs/archive/: HISTORICAL_NOTEBOOKS_ARCHIVE.md  HOPFIELD_DMFT_ARCHIVE.md  HOPFIELD_DMFT_RETIREMENT.md  JULIA_LEGACY_ARCHIVE.md  LEGACY_RESULTS_ARCHIVE.md
experiments-analysis/: MMD_DISTRIBUTION_DISTANCE_BASELINE.md  analysis-J.ipynb  analysis-mnist.ipynb  analysis-uturn.ipynb  analysis.ipynb  analysis_loss_convergence.ipynb  analysis_mmd_distribution_distance.ipynb  analysis_mmd_distribution_distance_corrected.ipynb  experiments.csv  loss_convergence.ipynb  mmd_results_presentation_1.ipynb  res-exp-oneshot_fair_L1024_l2reg0.01_uniform_linear_n1000.csv  res-exp-oneshot_fair_L1024_l2reg0.0_uniform_linear_n1.csv  res-exp-oneshot_fair_L1024_l2reg0.0_uniform_linear_n100.csv  res-exp-oneshot_greedy_L1024_hebbian_uniform_linear_n1000.csv  res-exp-oneshot_greedy_L1024_l2reg0.01_uniform_linear_n1000.csv  res-exp-oneshot_greedy_L1024_l2reg0.0_uniform_linear_n1.csv  res-exp-oneshot_greedy_L1024_l2reg0.0_uniform_linear_n100.csv  res-exp-oneshot_greedy_L1024_l2reg0.1_uniform_linear_n1000.csv  results_mmd_distribution_distance.csv  run_uturn_experiments.py  utils.py
experiments-analysis/results/: results_mmd_distribution_distance.csv  results_mmd_distribution_distance_corrected.csv  results_mmd_time_sliced.csv
julia-code/SP/: Manifest.toml  MaskedDiffusion_SP.jl  ODE.jl  Project.toml  common.jl  helpers.jl  methods.jl
julia-code/hiddenmanifold/: Manifest.toml  Project.toml  SignChannel.jl  SignChannelRenyi.jl
julia-code/old/: Manifest.toml  Project.toml  lux_train_uniform_data.jl
notes/: bibliography.bib  notes_dmft_masked_hopfield.typ  notes_generalization_TODO.typ  notes_hiddenmanifold.typ  notes_hopfield.typ  notes_maskeddiffusion_hiddenmanifold.typ  notes_memorization.typ
paper/: bibliography.bib  main-neuralnetworks.typ
scripts/: reproduce_smoke.sh  span-slurm.sh  train-cpu-mnist.sh  train-cpu.sh  train-gpu.sh  uturn.sh  validate_reference_artifacts.sh
src-hopfield/: hopfield_saddle_point.py  mcmc_hopfield.py  plot_hopfield.py
src/maskeddiffusion/: __init__.py  artifacts.py  checkpoints.py  config.py  dimensions.py  masking.py  models.py  objectives.py  randomness.py  samplers.py  teacher.py  training.py  uturn.py
tests/integration/: test_evaluate_cli_provenance.py  test_experiments_runner.py  test_sample_cli_reproducibility.py  test_smoke_flow.py  test_uturn_cli.py
tests/property/: test_notation_enforcement.py  test_phase4c_closure.py  test_repository_hardening.py
tests/regression/: test_mmd_notebook_equivalence.py  test_original_architecture_fixtures.py  test_preservation.py
tests/unit/: test_analysis_ingest.py  test_analysis_plots.py  test_analysis_provenance.py  test_analysis_report.py  test_analysis_rows.py  test_analysis_statistics.py  test_analysis_synthetic.py  test_artifacts.py  test_checkpoint_resume.py  test_config_validation.py  test_dimensions.py  test_experiments_interventions.py  test_experiments_plan.py  test_experiments_spec.py  test_experiments_uturn_stage.py  test_masking.py  test_mmd_comparisons.py  test_models.py  test_objectives.py  test_randomness.py  test_run_record_hash_verification.py  test_run_record_schema.py  test_sampler_seed_wiring.py  test_samplers.py  test_teacher.py  test_uturn.py
(+82 files in other folders)
