[project]
name = "maskeddiffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2,<2.0",
    "jupyterlab>=4.4.9,<5.0",
    "lightning>=2.5.5,<3.0",
    "matplotlib>=3.10.6,<4.0",
    "pandas>=2.3.3,<3.0",
    "scipy>=1.14.0,<2.0",
    "tensorboard>=2.20.0,<3.0",
    "torch>=2.8.0,<3.0",
    "torch-tb-profiler>=0.4.3,<1.0",
    "torchvision>=0.23.0,<1.0",
    "tqdm>=4.67.1,<5.0",
    "numba>=0.60.0",
]
