[project]
name = "maskeddiffusion"
version = "0.2.0"
description = "Shallow masked diffusion models on a hidden-manifold teacher: memorization vs. generalization for linear masked denoisers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Active package
    "torch>=2.8.0,<3.0",
    "numpy>=1.26",
    # Legacy modules + analysis notebooks (removed when legacy retires)
    "lightning>=2.5.5,<3.0",
    "matplotlib>=3.10.6,<4.0",
    "pandas>=2.3.3,<3.0",
    "scipy>=1.14.0,<2.0",
    "tensorboard>=2.20.0,<3.0",
    "torchvision>=0.23.0,<1.0",
    "tqdm>=4.67.1,<5.0",
    "numba>=0.60.0",
    "jupyterlab>=4.4.9,<5.0",
]

[project.scripts]
maskeddiffusion-train = "maskeddiffusion.cli.train:main"
maskeddiffusion-sample = "maskeddiffusion.cli.sample:main"
maskeddiffusion-evaluate = "maskeddiffusion.cli.evaluate:main"
maskeddiffusion-validate-artifact = "maskeddiffusion.cli.validate_artifact:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maskeddiffusion"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Lint only the active package and tests; legacy flat modules and notebooks
# are frozen pending retirement (docs/MIGRATION_REPORT.md).
include = ["src/**/*.py", "tests/**/*.py"]
# Byte-exact copy of a notebook cell (docs/MMD_NOTEBOOK_PROVENANCE.md); its
# sha256 is pinned in the fixture and must never be reformatted or "fixed".
extend-exclude = ["tests/fixtures/mmd_notebook_reference_v1/notebook_cell11_mmd_block.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
